tests/errors/type_check/function/return_param_not_last.sim
fn f($return: &out i64, x: i64) { entry: return }